# guided-selfrevision

./: .env  .gitignore  BROR_EVALUATION_SCRIPTS.md  EIG_EVALUATION_SCRIPTS.md  EIG_VLLM_INTEGRATION_SUMMARY.md  README.md  eval.sh  eval_bror.sh  eval_bror_comparative.sh  eval_bror_fast.sh  eval_bror_precision.sh  eval_eig.sh  eval_eig_comparative.sh  eval_eig_debug.sh  eval_eig_fast.sh  eval_eig_precision.sh  eval_eig_precision_fixed.sh  eval_eig_precision_multi_gpu.sh  eval_stepwise.sh  eval_stepwise_with_threshold.sh  lm_eval command.txt  pyproject.toml  run_s1_1_1_5B_eval_slurm.sh  test_debug_features.py  test_eig_debug.py  test_eig_syntax.py  test_eig_vllm.py  test_multi_gpu.sh
docs/: stepwise_uncertainty_debugging.md
eval/: README.md
eval/lm-evaluation-harness/: run_eval.py
eval/lm-evaluation-harness/lm_eval/: __main__.py  utils.py
eval/lm-evaluation-harness/lm_eval/budget_forcing/: README.md  __init__.py  bror_core.py  bror_usage_example.py  core.py  eig_core.py  eig_usage_example.py  hf_entropy.py  scaler_registry.py  scalers.py  test_bror_basic.py  test_eig_basic.py  utils.py  vllm_core.py
eval/lm-evaluation-harness/lm_eval/edging/: transformers.py
logs/: s1_eval_29097571.err  s1_eval_29097571.out
scripts/: eval.sh  eval_array.sh
src/budget_forcing/: __init__.py  core.py  scaler_registry.py
src/budget_forcing/scalers/: __init__.py  entropy_thresholding.py  step_wise_uncertainty_driven.py  uncertainty_driven_reevaluation.py  util.py
tests/: test_imports.py  test_parameter_fix.py  test_stepwise.py  test_vllm_stepwise.py
(+169 files in other folders)
