[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "budget_forcing"
version = "0.1.0"
description = "Experimental budget forcing strategies for LLMs"
authors = [
    { name = "Alexander Brady" },
    { name = "Simon Storf" }
]
readme = { file = "README.md", content-type = "text/markdown" }

dependencies = [
    "numpy",
    "torch",
    "vllm"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
